Fix blockquote color in dark mode.

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -368,6 +368,8 @@ a.color-button
     color: #fff !important;
   tr:nth-child(2n)
     background: #2b2f33;
+  blockquote
+    color: #ddd;
 
 @media (prefers-color-scheme: dark)
   html
@@ -437,3 +439,5 @@ a.color-button
     color: #fff !important;
   tr:nth-child(2n)
     background: #2b2f33;
+  blockquote
+    color: #ddd;
